--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "dependencies": {
     "eventemitter3": "^3.1.0",
     "exports-loader": "^0.7.0",
+    "http-server": "^0.12.0",
     "imports-loader": "^0.8.0",
     "path": "^0.12.7"
   }
